# cats_fast_api_service

./: .env-dev  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini  setup.cfg  test_data.sql
src/app/: main.py
src/app/alembic/: env.py
src/app/alembic/versions/: caaa04b8af5e_добавить_таблицу_котов.py
src/app/api/: cat_handlers.py
src/app/core/: settings.py
src/app/models/: __init__.py  base.py  db_helper.py  models.py
src/app/schemas/: schemas.py
src/app/service/: cat.py
src/tests/: conftest.py  test_cats_api.py
