[tool.poetry]
name = "workmate-cats"
version = "0.1.0"
description = "Тестовое задание"
authors = ["Aleksey Panin <lllrikitikilll@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.35"
alembic = "^1.13.3"
pydantic-settings = "^2.5.2"
uvicorn = "^0.31.0"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
mypy = "^1.11.2"
wemake-python-styleguide = "^0.19.2"
pre-commit = "^3.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
